--- a/conducao.html
+++ b/conducao.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container">
-        <form action="#" method="post" class="form">
+        <form action="conducao.php" method="post" class="form">
             <div class="separa">
                 <div class="d1">
                     <label for="opcao1" class="agrupamento">
