--- a/decisaotransporte.html
+++ b/decisaotransporte.html
@@ -13,20 +13,20 @@
 <body>
 
     <div class="container">
-        <form action="#" method="post" class="form">
+        <form action="decisaotransporte.php" method="post" class="form">
             <div class="separa">
                 <div class="d1">
                     <label for="opcao1" class="agrupamento">
                         <input type="checkbox" id="opcao1" name="opcao1" value="Opção 1">
                         <span class="checkmark"></span>
-                        <img src="image/critico.png" width="75px" height="75px" class="imagem">
+                        <img src="image/critico.png" width="35px" height="35px" class="imagem">
                         <div class="texto1">Crítico</div>
                     </label><br>
 
                     <label for="opcao2" class="agrupamento">
                         <input type="checkbox" id="opcao2" name="opcao2" value="Opção 2">
                         <span class="checkmark"></span>
-                        <img src="image/potencialmenteinstavel.png" width="75px" height="75px" class="imagem">
+                        <img src="image/potencialmenteinstavel.png" width="35px" height="35px" class="imagem">
                         <div class="texto1">Potencialmente Instável</div>
                     </label>
                 </div>
@@ -35,14 +35,14 @@
                     <label for="opcao3" class="agrupamento">
                         <input type="checkbox" id="opcao3" name="opcao3" value="Opção 3">
                         <span class="checkmark"></span>
-                        <img src="image/instavel.png" width="75px" height="75px" class="imagem">
+                        <img src="image/instavel.png" width="35px" height="35px" class="imagem">
                         <div class="texto1">Instável</div>
                     </label><br>
 
                     <label for="opcao4" class="agrupamento">
                         <input type="checkbox" id="opcao4" name="opcao4" value="Opção 4">
                         <span class="checkmark"></span>
-                        <img src="image/feliz.png" width="75px" height="75px" class="imagem">
+                        <img src="image/feliz.png" width="35px" height="35px" class="imagem">
                         <div class="texto1">Estável</div>
                     </label>
                 </div>
