--- a/problemas.html
+++ b/problemas.html
@@ -57,7 +57,7 @@
 <body>
 
     <div class="container">
-        <form action="" method="post" class="form" id="form1">
+        <form action="problemas.php" method="post" class="form" id="form1">
             <div class="separa">
                 <div class="d1">
                     <label for="op1" class="agrupamento">
@@ -131,7 +131,7 @@
             </div>
             <br>
             <div class="separa_btn">
-                <input type="button" value="Enviar" class="btn" onclick="Listar();">
+                <input type="submit" value="Enviar" class="btn" >
                 <input type="reset" value="Limpar" class="btn">
             </div>
         </form>
