--- a/dados2.html
+++ b/dados2.html
@@ -12,9 +12,9 @@
     <div class="formulario">
         <form method="post" action="dados2.php">
             <div class="forms">
-                <div class="usb">Nº USB: <input type="varchar" name="usb" id="usb"></div>
+                <div class="rg">RG/CPF Paciente: <input type="varchar" name="rg" id="rg" placeholder="Doc Paciente"></div>
 
-                <div class="ocorr">Nº Ocorr: <input type="varchar" name="ocorrencia" id="ocorr"></div>  
+                <div class="usb">Nº USB: <input type="varchar" name="usb" id="usb"></div>
                 
                 <div class="desp">DESP: <input type="varchar" name="desp" id="desp"></div>
 
