--- a/procedimentosefetuados2.html
+++ b/procedimentosefetuados2.html
@@ -199,7 +199,7 @@
 
                     <label for="opcao25" class="agrupamento">
                         <div class="escreve">
-                            <input type="text" placeholder="Outro...">
+                            <input type="varchar" placeholder="Outro...">
                         </div>
                     </label>
 
