--- a/sinaisesintomas.html
+++ b/sinaisesintomas.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container">
-        <form action="#" method="post" class="form">
+        <form action="sinaisesintomas.php" method="post" class="form">
             <div class="separa">
                 <div class="d1">
                     <label for="opcao1" class="agrupamento">
@@ -130,20 +130,20 @@
 
                 <div class="d3">             
 
-                    <label for="opcao21" class="agrupamento">
-                        <input type="checkbox" id="opcao21" name="opcao21" value="Opção 21">
+                    <label for="opcao20" class="agrupamento">
+                        <input type="checkbox" id="opcao21" name="opcao20" value="Opção 20">
                         <span class="checkmark"></span>
                         <div class="texto1">Face Pálida</div> 
                     </label><br>
 
-                    <label for="opcao22" class="agrupamento">
-                        <input type="checkbox" id="opcao22" name="opcao22" value="Opção22">
+                    <label for="opcao21" class="agrupamento">
+                        <input type="checkbox" id="opcao21" name="opcao21" value="Opção21">
                         <span class="checkmark"></span>
                         <div class="texto1">Bronco-Aspirando</div>
                     </label><br>
 
-                    <label for="opcao23" class="agrupamento">
-                        <input type="checkbox" id="opcao23" name="opcao23" value="Opção23">
+                    <label for="opcao22" class="agrupamento">
+                        <input type="checkbox" id="opcao22" name="opcao22" value="Opção22">
                         <span class="checkmark"></span>
                         <div class="texto1">Descerebração</div>
                     </label><br>
@@ -151,7 +151,7 @@
                     <label for="op2" class="agrupamento">
                         <div class="titulo"><p>Cianose</p></div>
                         <div class="arruma2">
-                            <select name="op2" id="op2">
+                            <select name="opcao23" id="op2">
                                 <option value="-----">-----</option>
                                 <option value="Generalizado">Lábios</option>
                                 <option value="Localizado">Extremidade</option>
@@ -162,7 +162,7 @@
                     <label for="op2" class="agrupamento">
                         <div class="titulo"><p>Edema</p></div>
                         <div class="arruma2">
-                            <select name="op2" id="op2">
+                            <select name="opcao24" id="op2">
                                 <option value="-----">-----</option>
                                 <option value="Generalizado">Generalizado</option>
                                 <option value="Localizado">Localizado</option>
