--- a/obj.html
+++ b/obj.html
@@ -9,11 +9,10 @@
     <title>Objetos recolhidos</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="obj.php" method="post">
         <h3>Objetos Recolhidos</h3>
 
-        <textarea type="varchar" name="obj" id="obj" class="obj" >
-
+        <textarea type="varchar" name="opcao1" id="obj" class="obj" >
         </textarea>
         
 
